# rust-target-tuples

./: .gitignore  Cargo.toml  Makefile.in  README.md  configure
.github/workflows/: autotools.yml  clippy.yml  msrv.yml  rust.yml
m4/: lcrust_prog_rustc.m4
src/: config-sub.rs  lib.rs  pieces.rs
target-tuple-pieces/: Cargo.toml
target-tuple-pieces/src/: lib.rs
target-tuples-macro/: Cargo.toml
target-tuples-macro/src/: helpers.rs  lib.rs
tests/: config-sub.data  match-targets.rs  sub_tests.rs
