[package]
name = "target-tuples"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "config-sub"
path = "src/config_sub.rs"

[package.metadata.install-targets.config-sub]
installed-path = "config.sub"

[package.metadata.install-targets.config-sub-man]
type = "man"
installed-path = "<mandir>/man1/config.sub.1"
target-file = "config.sub.1"
