[package]
name = "target-tuples"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = """
    A library to parse target tuples of the form `<arch>-<vendor>-<system>`, similar to those used by autoconf.
"""
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target-tuple-pieces = { path = "target-tuple-pieces", version = "0.16.0" }
target-tuples-macro = { path = "target-tuples-macro", version = "0.1.0" }

[features]
alloc = []

[[bin]]
name = "config-sub"
path = "src/config-sub.rs"

[package.metadata.install-targets.config-sub]
installed-path = "config.sub"

[package.metadata.install-targets.config-sub-man]
type = "man"
installed-path = "<mandir>/man1/config.sub.1"
target-file = "config.sub.1"

[workspace]
include = ["target-tuple-pieces", "target-tuples-macro"]

[workspace.package]
version = "0.16.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
rust-version = "1.66.0"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/chorman0773/rust-target-tuples"
