[package]
name = "target-tuple-pieces"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Pieces of a target, like the arch, vendor, or system.
Intended to be used via the target-tuples crate
"""

[dependencies]
