[package]
name = "target-tuples-macro"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = """
proc-macro for target-tuples
"""

[dependencies]
target-tuple-pieces = { version = "0.16.0", path = "../target-tuple-pieces" }

[lib]
proc-macro = true
